[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[project]
name = "tabs"
version = "2.0.0"
description = "Torsion Angular Bin Strings"
authors = [
    { name = "Jessica Braun", email = "braunje@ethz.ch" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
keywords = ["torsion space", "chemistry", "rdkit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tabs"]

[tool.setuptools.package-data]
"tabs" = ["TorsionPreferences/*.json"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
requires = tox-conda

[testenv]
setenv =
    CONDA_DLL_SEARCH_MODIFICATION_ENABLE = 1
conda_channels =
    conda-forge
conda_deps =
    python=3.13
    rdkit
    scikit-learn
    jupyter
    ca-certificates
    certifi
    openssl
    matplotlib
    ipywidgets
    py3Dmol
    pytest
    mdtraj
    pytest-cov
    tqdm
commands = 
    pip install .
    pytest    
"""
